# ffmpegthumbs

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  ffmpegthumbnailer.cpp  ffmpegthumbnailer.h  ffmpegthumbnailersettings5.kcfg  ffmpegthumbnailersettings5.kcfgc  ffmpegthumbs.desktop  ffmpegthumbs.json  org.kde.ffmpegthumbs.appdata.xml  org.kde.ffmpegthumbs.metainfo.xml
autotests/ossfuzz/: CMakeLists.txt  build_fuzzers.sh  kde_thumbnailers_fuzzer.cc.in  prepare_build.sh
cmake/: FindFFmpeg.cmake
ffmpegthumbnailer/: AUTHORS  ChangeLog  README  filmstrip.h  filmstripfilter.cpp  filmstripfilter.h  histogram.h  ifilter.h  imagewriter.cpp  imagewriter.h  moviedecoder.cpp  moviedecoder.h  videoframe.h  videothumbnailer.cpp  videothumbnailer.h
tests/: CMakeLists.txt  ffmpegthumbtest.cpp  test_invariant_moviedecoder.cpp
